force-app/main/default/objects/FieloPLT__Triggers__c/FieloPLT__Triggers__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>It allows you to disable default Fielo Triggers.</description>
    <label>Triggers</label>
</CustomObject>