force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__Action__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Action__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Action trigger.</description>
    <inlineHelpText>When unchecked, it disables Action trigger.</inlineHelpText>
    <label>Action</label>
    <type>Checkbox</type>
</CustomField>