force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__Agreement__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Agreement__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Agreement trigger.</description>
    <inlineHelpText>When unchecked, it disables Agreement trigger.</inlineHelpText>
    <label>Agreement</label>
    <type>Checkbox</type>
</CustomField>