force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__Badge__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Badge__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Badge trigger.</description>
    <inlineHelpText>When unchecked, it disables Badge trigger.</inlineHelpText>
    <label>Badge</label>
    <type>Checkbox</type>
</CustomField>