force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__BadgeMember__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__BadgeMember__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Badge Member trigger.</description>
    <inlineHelpText>When unchecked, it disables Badge Member trigger.</inlineHelpText>
    <label>Badge Member</label>
    <type>Checkbox</type>
</CustomField>