force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__Challenge__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Challenge__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Challenge trigger.</description>
    <inlineHelpText>When unchecked, it disables Challenge trigger.</inlineHelpText>
    <label>Challenge</label>
    <type>Checkbox</type>
</CustomField>