force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__ChallengeMember__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ChallengeMember__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Challenge Member trigger.</description>
    <inlineHelpText>When unchecked, it disables Challenge Member trigger.</inlineHelpText>
    <label>Challenge Member</label>
    <type>Checkbox</type>
</CustomField>