force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__ChallengeReward__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ChallengeReward__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables ChallengeReward trigger.</description>
    <inlineHelpText>When unchecked, it disables ChallengeReward trigger.</inlineHelpText>
    <label>ChallengeReward</label>
    <type>Checkbox</type>
</CustomField>