force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__Criterion__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Criterion__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Criteria trigger.</description>
    <inlineHelpText>When unchecked, it disables Criteria trigger.</inlineHelpText>
    <label>Criteria</label>
    <type>Checkbox</type>
</CustomField>