force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__CriterionGroup__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__CriterionGroup__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Criterion Group trigger.</description>
    <inlineHelpText>When unchecked, it disables Criterion Group trigger.</inlineHelpText>
    <label>Criterion Group</label>
    <type>Checkbox</type>
</CustomField>