force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__EmailCampaign__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__EmailCampaign__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Email Campaign trigger.</description>
    <inlineHelpText>When unchecked, it disables Email Campaign trigger.</inlineHelpText>
    <label>Email Campaign</label>
    <type>Checkbox</type>
</CustomField>