force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__EmailTemplate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Email Template trigger.</description>
    <inlineHelpText>When unchecked, it disables Email Template trigger.</inlineHelpText>
    <label>Email Template</label>
    <type>Checkbox</type>
</CustomField>