force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__Event__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Event__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Event trigger.</description>
    <inlineHelpText>When unchecked, it disables Event trigger.</inlineHelpText>
    <label>Event</label>
    <type>Checkbox</type>
</CustomField>