force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__KPI__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__KPI__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables KPI trigger.</description>
    <inlineHelpText>When unchecked, it disables KPI trigger.</inlineHelpText>
    <label>KPI</label>
    <type>Checkbox</type>
</CustomField>