force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__KPIDomain__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__KPIDomain__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables KPIDomain trigger.</description>
    <inlineHelpText>When unchecked, it disables KPIDomain trigger.</inlineHelpText>
    <label>KPIDomain</label>
    <type>Checkbox</type>
</CustomField>