force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__Level__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Level__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Level trigger.</description>
    <inlineHelpText>When unchecked, it disables Level trigger.</inlineHelpText>
    <label>Level</label>
    <type>Checkbox</type>
</CustomField>