force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Member__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Member trigger.</description>
    <inlineHelpText>When unchecked, it disables Member trigger.</inlineHelpText>
    <label>Member</label>
    <type>Checkbox</type>
</CustomField>