force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__Mission__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Mission__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Mission trigger.</description>
    <inlineHelpText>When unchecked, it disables Mission trigger.</inlineHelpText>
    <label>Mission</label>
    <type>Checkbox</type>
</CustomField>