force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__MissionMember__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__MissionMember__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables MissionMember trigger.</description>
    <inlineHelpText>When unchecked, it disables MissionMember trigger.</inlineHelpText>
    <label>MissionMember</label>
    <type>Checkbox</type>
</CustomField>