force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__Model__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Model__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Model trigger.</description>
    <inlineHelpText>When unchecked, it disables Model trigger.</inlineHelpText>
    <label>Model</label>
    <type>Checkbox</type>
</CustomField>