force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__PageSettings__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__PageSettings__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables PageSettings trigger.</description>
    <inlineHelpText>When unchecked, it disables PageSettings trigger.</inlineHelpText>
    <label>PageSettings</label>
    <type>Checkbox</type>
</CustomField>