force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__Point__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Point__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Point trigger.</description>
    <inlineHelpText>When unchecked, it disables Point trigger.</inlineHelpText>
    <label>Point</label>
    <type>Checkbox</type>
</CustomField>