force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__PointType__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__PointType__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables PointType trigger.</description>
    <inlineHelpText>When unchecked, it disables PointType trigger.</inlineHelpText>
    <label>PointType</label>
    <type>Checkbox</type>
</CustomField>