force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__Program__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Program__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Program trigger.</description>
    <inlineHelpText>When unchecked, it disables Program trigger.</inlineHelpText>
    <label>Program</label>
    <type>Checkbox</type>
</CustomField>