force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__ProgramAssignment__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ProgramAssignment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables ProgramAssignment trigger.</description>
    <inlineHelpText>When unchecked, it disables ProgramAssignment trigger.</inlineHelpText>
    <label>ProgramAssignment</label>
    <type>Checkbox</type>
</CustomField>