force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__Promotion__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Promotion__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Promotion trigger.</description>
    <inlineHelpText>When unchecked, it disables Promotion trigger.</inlineHelpText>
    <label>Promotion</label>
    <type>Checkbox</type>
</CustomField>