force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__Redemption__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Redemption__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Redemption trigger.</description>
    <inlineHelpText>When unchecked, it disables Redemption trigger.</inlineHelpText>
    <label>Redemption</label>
    <type>Checkbox</type>
</CustomField>