force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__RedemptionItem__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RedemptionItem__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Redemption Item trigger.</description>
    <inlineHelpText>When unchecked, it disables Redemption Item trigger.</inlineHelpText>
    <label>Redemption Item</label>
    <type>Checkbox</type>
</CustomField>