force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__Reward__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Reward__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Reward trigger.</description>
    <inlineHelpText>When unchecked, it disables Reward trigger.</inlineHelpText>
    <label>Reward</label>
    <type>Checkbox</type>
</CustomField>