force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__RewardItem__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RewardItem__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables RewardItem trigger.</description>
    <inlineHelpText>When unchecked, it disables RewardItem trigger.</inlineHelpText>
    <label>RewardItem</label>
    <type>Checkbox</type>
</CustomField>