force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__Rule__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Rule__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Rule trigger.</description>
    <inlineHelpText>When unchecked, it disables Rule trigger.</inlineHelpText>
    <label>Rule</label>
    <type>Checkbox</type>
</CustomField>