force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__RuleTrigger__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RuleTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables RuleTrigger trigger.</description>
    <inlineHelpText>When unchecked, it disables RuleTrigger trigger.</inlineHelpText>
    <label>RuleTrigger</label>
    <type>Checkbox</type>
</CustomField>