force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__Segment__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Segment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Segment trigger.</description>
    <inlineHelpText>When unchecked, it disables Segment trigger.</inlineHelpText>
    <label>Segment</label>
    <type>Checkbox</type>
</CustomField>