force-app/main/default/objects/FieloPLT__Triggers__c/fields/FieloPLT__Transaction__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Transaction__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It disables Transaction trigger.</description>
    <inlineHelpText>When unchecked, it disables Transaction trigger.</inlineHelpText>
    <label>Transaction</label>
    <type>Checkbox</type>
</CustomField>